# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.695 2010/04/26 07:38:01 robbat2 Exp $

  26 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update Manifest for deblob support in kernel-2 eclass.

  24 Apr 2010; Pacho Ramos <pacho@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  amd64 stable, bug 307847

  12 Apr 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  Stable for HPPA (bug #307847).

  11 Apr 2010; <nixnut@gentoo.org> gentoo-sources-2.6.32-r7.ebuild:
  ppc stable #307847

  10 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  -gentoo-sources-2.6.30-r5.ebuild, -gentoo-sources-2.6.31-r6.ebuild,
  -gentoo-sources-2.6.31-r7.ebuild, -gentoo-sources-2.6.31-r9.ebuild,
  -gentoo-sources-2.6.32-r2.ebuild, -gentoo-sources-2.6.32-r3.ebuild,
  -gentoo-sources-2.6.32-r4.ebuild, -gentoo-sources-2.6.32-r5.ebuild:
  Cleanup of old versions

  09 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #307847

*gentoo-sources-2.6.33-r1 (09 Apr 2010)

  09 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.33-r1.ebuild:
  Linux patches 2.6.33.1 and 2.6.33.2. Fix for alpha uac patch.

  08 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  gentoo-sources-2.6.32-r7.ebuild:
  stable x86, bug 307847

  05 Apr 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  Stable for HPPA (bug #305733).

*gentoo-sources-2.6.32-r8 (01 Apr 2010)

  01 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +gentoo-sources-2.6.32-r8.ebuild:
  Linux patch 2.6.32.10

  11 Mar 2010; Markos Chandras <hwoarang@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  Stable wrt bug #305733

  25 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.31-r10.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #305733
