@@ -1,10 +1,6 @@
-DIST deblob-2.6.27 67810 RMD160 2d697e569fb4ba294c94a50798de10d2ad930b84 SHA1 45b2a16c2df2c14380cd813c74be721b9537d03d SHA256 2eab6480d170a7204b09f2c1091f2b3e4c19c3525ea4887e6887501bfa263efc
-DIST deblob-2.6.28 72502 RMD160 a3f0a12e0c6312dfc7cacd0e81a50e57519b8df3 SHA1 5a7fb26f3c0c9855bb85431fa29fc285a19f7346 SHA256 432213f8caf6dc534a68dfb321dd33177f93c2fbdd57928a61e49947dd49f25c
-DIST deblob-2.6.29 76155 RMD160 b56288e338c16ec6aafd5d9146bd4dc8ae82d2ba SHA1 ab846a78ee43e2efd90417494cafe9dfa5b2d089 SHA256 ce0805a2767a1139fd952232eae04814c8910d0629963c2dc1e83449bc6a4987
-DIST deblob-2.6.30 79041 RMD160 7671b56dd4357eba1aa8097f02b5d7ccc9c86422 SHA1 c282c2c77d38618da7ac8fc5adb0663a0d4bdaa3 SHA256 e1f6ba1eec8ea0de1c4099a066512dfbc53ca5c6527e7593ba0d4e85b36b626d
-DIST deblob-2.6.31 80819 RMD160 20972daf3852336198b5e1ac4f95a9d88f5d1d67 SHA1 41070a790894136913469bdcb3433b3d13b3e797 SHA256 4dce1f711d5098430f15ca0664ad3a1ad83a0ce6faf10d0dc8b8f53f2ab655f0
-DIST deblob-2.6.32 84094 RMD160 394f46ec5b869638a7bc2e87beb118167c9bd6cb SHA1 1a2a1efb72126609d9e3b9be99ae5be2751efd06 SHA256 de625f0bd221c9c38d4453f1b709622f222d86a0ae9350d2b7b0e17795e6de6d
-DIST deblob-2.6.33 86599 RMD160 534eb7b76ea29561a0b6e73659f67fc746fad111 SHA1 0c3c2d8c299f3cb5d807bc4a35b20bdca50ccbce SHA256 176aa9c73f27c9c69f198e3637cae61072f152c25c468ffbebf1a4c2494d52d0
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST genpatches-2.6.16-15.base.tar.bz2 98632 RMD160 46e8cfcae8fea262d7599c2e4d3e7fbc8af239b2 SHA1 e0f253ad01a4da388675af4b90223289d9bcd578 SHA256 fb78f2a4d32d1770a34d9ee254686a6a12102fa99c1bb73e9c282ab5f82dddaa
 DIST genpatches-2.6.16-15.extras.tar.bz2 137758 RMD160 4800c6612a3d9f1c2d7f4af923ae5c254416fbcb SHA1 29ed0dd9dc7965b4755048792eee33aea38d5311 SHA256 6ce07f500b9b76a988d2384cb7fd73dda70543f9a6429f5ffea1ea737c534fad
 DIST genpatches-2.6.25-11.base.tar.bz2 137951 RMD160 c8df40098760d8796e653140cbb1df1ec7f42ab7 SHA1 bd94c26d6246279ed53042523de99ebaf13dd6e8 SHA256 a651296c2aa446665211c4e4de304e47f765dc2f21a4b20251ebeeb1cb1b2c83
@@ -39,6 +35,8 @@ DIST genpatches-2.6.33-1.base.tar.bz2 97003 RMD160 4d91e70530b65cdb33da6239eb5f6
 DIST genpatches-2.6.33-1.extras.tar.bz2 24905 RMD160 f9154c7ea7095486c01ee890a1a975f406b90e61 SHA1 296086ad7f8df57dbae29fff46692414474b96af SHA256 36313c16fb8998a3a22088675b0411d066ba9f10e40cc79e9c838c0d7245dae6
 DIST genpatches-2.6.33-2.base.tar.bz2 96621 RMD160 844b2c0c0ebd43f4d6b5516b12094bd15ec5c552 SHA1 578644ee3e338c17804e0fb45c2f4919c49aa6be SHA256 ee5ab1eb18f5986ec068dab1fbef960a926331ab4334570791dcc4fbdba2bc84
 DIST genpatches-2.6.33-2.extras.tar.bz2 24943 RMD160 c2e60949aea1f22bf73a4c53557a225cdb2d1a73 SHA1 a7dc2a56fda8d001e4d7f2bb1cb202293775495b SHA256 fbe153c96200834ee1b7b0966996d1be8906fc76fb025f43ceea97817ef89918
+DIST genpatches-2.6.33-3.base.tar.bz2 135726 RMD160 3e32b98bdc22141ec4262edd1735dedfd1b6e719 SHA1 4d5e95972b3afc41c1d102bf75d1b22edacc11ba SHA256 c1d29084f715c1c30fcbb64a29c8cee076cf29286cf0ad10c9df51eb136b4bb6
+DIST genpatches-2.6.33-3.extras.tar.bz2 23522 RMD160 579e83343a0f6bae8d543abf1d3a52cabd2c8aa8 SHA1 c9023272ea6805878b906affa4dedb50565343f1 SHA256 a301f823a11cbaae5b81092b60d92a9d9b53e8522167713428e74db2b4c629c1
 DIST linux-2.6.16.tar.bz2 40845005 RMD160 af5c2f55733fadd2fdf8b00da55e7b31d516d4e8 SHA1 bef21cd5063a648f33a99a26f4742dd05eb4dca2 SHA256 1200dcc7e60fcdaf68618dba991917a47e41e67099e8b22143976ec972e2cad7
 DIST linux-2.6.25.tar.bz2 48601689 RMD160 cf3ed52f888fe9df7a93abe4fdc2f598e1ba0ce4 SHA1 aa6187a1c212dd2d8bd906b023fcefdcf711f35e SHA256 108b2a3f2b05c0e57d1d0977619525e46f8d4b425aef4b38b47dcf94292f2dd2
 DIST linux-2.6.26.tar.bz2 49441874 RMD160 57c37e81afa48e7c05e1a933d390a12ac2921255 SHA1 3f44384bf84f27add3b6c43ec68f974d7f7e9c67 SHA256 666488e2511393fdb901eaf1e67275bcc38ab37c930e8a9adb290a95c1721a2a
@@ -65,6 +63,14 @@ EBUILD gentoo-sources-2.6.32-r6.ebuild 780 RMD160 717229605ff38c53d4e9ce2a08cbe1
 EBUILD gentoo-sources-2.6.32-r7.ebuild 769 RMD160 4405eef11d8fa7a567fb082e256bf451df54d2a6 SHA1 5048e4b37c59ad1253b70235515ecbefbd3c5b1b SHA256 210d6cba70d8090f28dca701087c1a75ad1602d0797677263a229eb06b81d7f3
 EBUILD gentoo-sources-2.6.32-r8.ebuild 780 RMD160 3ae47468fa78fdc64ccf9be9380e07735ac00f38 SHA1 e64d009113ee37691c449875a7f244293be96194 SHA256 b0a683ac7262eeaf4ea55b41421969a372e380de2f369d48e431c40763f28158
 EBUILD gentoo-sources-2.6.33-r1.ebuild 780 RMD160 6b698268362a5488cc4a71f8c2d3471b83628bce SHA1 4fc4fd123497db58967f400cc61aeceedda0465f SHA256 259130f6185b3afec54e8a03c460e630465ba477190354b2384795b2a8a1b073
+EBUILD gentoo-sources-2.6.33-r2.ebuild 780 RMD160 a01b1d0d70dc9ca4b64c61c1c6a9ddb33e8c9fdb SHA1 75f16a84fbb01b61465255eb90b931b8f224e8b8 SHA256 a22094691614057e47c4eccd2894c07b81e5f2a3882267872dff46e534bb4a51
 EBUILD gentoo-sources-2.6.33.ebuild 777 RMD160 70fa6e91228213fc4381ed39a42d632e0b467748 SHA1 1c007bc5cf504bdbe3e8093281d9574d603581ba SHA256 a55eab05df96f337134c3ec3aba91fce92b1c6e5e725ab7655c52ca998e18ccf
-MISC ChangeLog 131321 RMD160 b8e91dee8996121b5216bb92b8675fd053d53ff0 SHA1 b3a322046fcc7a423fa755812e1426208befdc35 SHA256 e7447f1564ecca62b4b52fc30cec13e15b26fe78c7913a77b6d1fbd836e01a61
+MISC ChangeLog 131506 RMD160 c8a1f979c2e06d733d476d3b2684a3e8f5e3b016 SHA1 44575cf45c9428102ee1e5bf98e64a563b57dae0 SHA256 233f96006bd38ee1c94ae8146eeb75cb86adb9a11cb243ec3c77e95d89b1d6af
 MISC metadata.xml 361 RMD160 47f03fe26fe89efb55c685021e9b8c8adf12f967 SHA1 1436b67d4810cd50d6c6576f6688314313f49272 SHA256 0e9caec6124c08e79a6c43f86a8502d5e002c1302f37913437f96b21c811bc10
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkve6/0ACgkQPDPGULV25OOmEACgqApGMQzZkgv4EZ5CbC1zdgW4
+WnAAoKHZJDObT4KnrxAAyZlkHWfxeB8w
+=BtK+
+-----END PGP SIGNATURE-----
