@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.695 2010/04/26 07:38:01 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.696 2010/05/03 15:30:03 mpagano Exp $
+
+*gentoo-sources-2.6.33-r2 (03 May 2010)
+
+  03 May 2010; Mike Pagano <mpagano@gentoo.org>
+  +gentoo-sources-2.6.33-r2.ebuild:
+  Linux patch 2.6.33.3. Removal of alpha sysctl uac patch.
 
   26 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
   Update Manifest for deblob support in kernel-2 eclass.
